# vector-search-face-id

./: .gitignore  README.md  embed_images.py  image_search.py  pyproject.toml  requirements.txt
